docs/apache-airflow-providers-google/8.10.0/_sources/_api/tests/system/providers/google/suite/example_local_to_drive/index.rst.txt
:py:mod:`tests.system.providers.google.suite.example_local_to_drive`
====================================================================

.. py:module:: tests.system.providers.google.suite.example_local_to_drive

.. autoapi-nested-parse::

   Example DAG using LocalFilesystemToGoogleDriveOperator.

   Using this operator requires the following additional scopes:
   https://www.googleapis.com/auth/drive



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_local_to_drive'

   

.. py:data:: FILE_NAME_1
   :value: 'test1'

   

.. py:data:: FILE_NAME_2
   :value: 'test2'

   

.. py:data:: LOCAL_PATH

   

.. py:data:: SINGLE_FILE_LOCAL_PATHS

   

.. py:data:: MULTIPLE_FILES_LOCAL_PATHS

   

.. py:data:: DRIVE_FOLDER
   :value: 'test-folder'

   

.. py:data:: upload_single_file

   

.. py:data:: test_run

   

