docs/apache-airflow-providers-google/10.17.0/_sources/_api/tests/system/providers/google/suite/example_local_to_drive/index.rst.txt
:py:mod:`tests.system.providers.google.suite.example_local_to_drive`
====================================================================

.. py:module:: tests.system.providers.google.suite.example_local_to_drive

.. autoapi-nested-parse::

   Example DAG using LocalFilesystemToGoogleDriveOperator.

   Using this operator requires the following additional scopes:
   https://www.googleapis.com/auth/drive



Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.suite.example_local_to_drive.create_temp_gcp_connection



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.suite.example_local_to_drive.DAG_ID
   tests.system.providers.google.suite.example_local_to_drive.ENV_ID
   tests.system.providers.google.suite.example_local_to_drive.FILE_NAME_1
   tests.system.providers.google.suite.example_local_to_drive.FILE_NAME_2
   tests.system.providers.google.suite.example_local_to_drive.CONNECTION_ID
   tests.system.providers.google.suite.example_local_to_drive.LOCAL_PATH
   tests.system.providers.google.suite.example_local_to_drive.SINGLE_FILE_LOCAL_PATHS
   tests.system.providers.google.suite.example_local_to_drive.MULTIPLE_FILES_LOCAL_PATHS
   tests.system.providers.google.suite.example_local_to_drive.DRIVE_FOLDER
   tests.system.providers.google.suite.example_local_to_drive.log
   tests.system.providers.google.suite.example_local_to_drive.test_run


.. py:data:: DAG_ID
   :value: 'example_local_to_drive'

   

.. py:data:: ENV_ID

   

.. py:data:: FILE_NAME_1
   :value: 'test1'

   

.. py:data:: FILE_NAME_2
   :value: 'test2'

   

.. py:data:: CONNECTION_ID

   

.. py:data:: LOCAL_PATH

   

.. py:data:: SINGLE_FILE_LOCAL_PATHS

   

.. py:data:: MULTIPLE_FILES_LOCAL_PATHS

   

.. py:data:: DRIVE_FOLDER

   

.. py:data:: log

   

.. py:function:: create_temp_gcp_connection()


.. py:data:: test_run

   

